--- a/src/app/libros/detalles/detalles.component.html
+++ b/src/app/libros/detalles/detalles.component.html
@@ -4,6 +4,7 @@
     <p><strong>Autor:</strong> {{ libro?.autor }}</p>
     <p><strong>Año de publicación:</strong> {{ libro?.fecha_publicacion }}</p>
     <p><strong>Editorial:</strong> {{ libro?.editorial }}</p>
+    <p><strong>Género:</strong> {{ libro?.genero }}</p>
     <p><strong>Páginas:</strong> {{ libro?.paginas }}</p>
     <img src="open.jpg" height="200em">
   </div>
