--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,33 +1,28 @@
 <h1 class="gradient-text">Kai Shelves</h1>
 <div class="menu">
-  <a routerLink="">Inicio</a>
-  <a routerLink="libros">Libros</a>
-  <a routerLink="lista">Leidos</a>
+  <a routerLink="">Home</a>
+  <a routerLink="/books">Books</a>
+  <a routerLink="/lista">Read</a>
 </div>
 <div>
   <button routerLink="login">Login</button>
 </div>
 
-<router-outlet></router-outlet>
-
 @if (mostrar) {
-<h2>Catálogo de libros</h2>
+<h2>Book catalog</h2>
 @for (libro of libros; track libro.titulo) {
 <div class="libro-card">
   <h3>{{ libro.titulo }}</h3>
-  @defer (on hover){
 
+  @defer {
   @for(imagen of imagen; track $index){
   <img src="{{imagen}}.jpg" height="100em">
-  }
-  }@placeholder {
-  <h2 align="center"> _ </h2>
-  }
-  <p><strong>Autor:</strong> {{ libro.autor }}</p>
-  <button (click)="cambioDetalles(libro)">Ver detalles</button>
+  }}
+
+  <p><strong>Author:</strong> {{ libro.autor }}</p>
+  <button (click)="cambioDetalles(libro)">See details</button>
 </div>
 }
 @empty {
-<p>No hay libros disponibles.</p>
-}
-}
+<p>No books available.</p>
+}}
