--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,1 +1,13 @@
-<p>error works!</p>
+<h1 class="gradient-text">Kai Shelves</h1>
+<div class="menu">
+  <a routerLink="">Home</a>
+  <a routerLink="/books">Books</a>
+  <a routerLink="/lista">Read</a>
+</div>
+<div>
+  <button routerLink="login">Login</button>
+</div>
+
+<div>
+    <strong>Página no encontrada</strong>
+</div>
