Login-movil (New) Componente para dispositivos moviles

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -5,7 +5,7 @@
   <a routerLink="/lista">Read</a>
 </div>
 <div>
-  <button routerLink="login">Login</button>
+  <button routerLink="/login">Login</button>
 </div>
 
 @if (mostrar) {
