--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -1,3 +1,13 @@
+<h1 class="gradient-text">Kai Shelves</h1>
+<div class="menu">
+  <a routerLink="">Home</a>
+  <a routerLink="/books">Books</a>
+  <a routerLink="/lista">Read</a>
+</div>
+<div>
+  <button routerLink="/register">Login</button>
+</div>
+
 <h2>Libros leídos</h2>
 
 @if (libros.length > 0) {
