--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -5,7 +5,7 @@
   <a routerLink="/lista">Read</a>
 </div>
 <div>
-  <button routerLink="/register">Login</button>
+  <button routerLink="/login">Login</button>
 </div>
 
 <h2>Libros leídos</h2>
