--- a/src/app/login-movil/login-movil.component.html
+++ b/src/app/login-movil/login-movil.component.html
@@ -1,8 +1,7 @@
 <h1 class="gradient-text">Kai Shelves</h1>
 <div class="menu">
     <a routerLink="">Home</a>
-    <a routerLink="/books">Books</a>
-    <a routerLink="/lista">Read</a>
+    <a routerLink="/lista">Read list</a>
 </div>
 <div>
     <button routerLink="/login">Login</button>
