--- a/src/app/catalog/catalog.component.css
+++ b/src/app/catalog/catalog.component.css
@@ -16,6 +16,11 @@
   text-align: center;
 }
 
+.book-title{
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
 .detalles-libro{
     padding-left: 45%;
