--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -10,7 +10,7 @@
     }
   </nav>
 
-  <h2 class="gradient-text" zº>Mis libros leídos</h2>
+  <h2 class="gradient-text" zº>My books read</h2>
 
   @if (loading()) {
   <div class="loading">Cargando lista...</div>
